# pd2md

./: .gitignore  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  overleaf_feature_catalog.md  pyproject.toml  test_dl.py
Pdleaf/planning/: roadmap.md
Pdleaf/planning/phase-1/: feature-1.1.md  feature-1.2.md  feature-1.3.md  feature-1.4.md  feature-1.5.md  feature-1.6.md  phase-1-blueprint.md
Pdleaf/planning/phase-2/: feature-2.1.md  feature-2.2.md  feature-2.3-2.5-2.6.md  feature-2.4.md  feature-2.7.md  feature-2.8.md  feature-2.9.md  phase-2-blueprint.md
Pdleaf/planning/phase-3/: feature-3.1.md  feature-3.2.md  features-3.5-3.6-3.7.md  (+1 more)
backend/app/: __init__.py  cli.py  config.py  main.py
backend/tests/: __init__.py  generate_test_pdfs.py  test_advanced.py  test_assembler.py  test_emitter.py  test_extractor.py  test_hardening.py  test_layout.py  test_semantic.py  test_tables.py
frontend/: app.js  index.html  style.css
test_docs/: analyze_results.py  diag_defs.py  generate_test_pdfs.py
test_docs/latex/: 01_simple_article.tex  02_multisection_report.tex  03_nested_lists.tex  04_complex_tables.tex  05_two_column.tex  06_bibliography.tex  07_titlepage_abstract.tex  08_figures_captions.tex  09_enum_itemize.tex  10_formatting.tex  11_headers_footers.tex  12_footnotes.tex  13_math_equations.tex  14_code_listings.tex  15_mixed_stress.tex  16_long_paragraphs.tex  17_blockquotes.tex  18_nested_tables.tex  19_headings.tex  20_definitions.tex  21_hyperlinks.tex  22_full_report.tex
test_docs/results/: batch_report.json
test_docs/results2/: batch_report.json
(+65 files in other folders)
